atualização de organização
- Organizei menu
- Organizei cabeçalho
- Organizei tocados recentemente

--- a/src/style/responsivo.css
+++ b/src/style/responsivo.css
@@ -24,11 +24,21 @@
  
     .secao-horizontal .cartao__titulo {
         font: 700 14px/20px Open Sans, sans-serif;
+        align-self: center;
     }
 
     .secao-vertical .cartao {
         background-color: transparent;
         padding: 0;
+    }
+
+    .menu-lateral {
+        width: 208px;
+    }
+
+    .secao-horizontal .cartao {
+       
+        column-gap: 0.5em;
     }
 
 }
@@ -73,6 +83,10 @@
     .navbar,
     .cabecalho__logo {
         display: none;
+    }
+
+    .menu-lateral {
+        width: 208px;
     }
 
 }
