--- a/src/style/organizacao.css
+++ b/src/style/organizacao.css
@@ -1,6 +1,108 @@
 .todo_conteudo {
 
-    
-    
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-areas:
+
+    "aside header"
+    "aside main"
+  
+}
+
+.cabecalho {
+
+    grid-area: header;
+
+}
+
+.menu-lateral {
+
+    grid-area: aside;
+
+}
+
+.principal {
+
+    grid-area: main;
+
 }
     
+.menu-lateral {
+   
+    display: grid;
+    grid-template-rows: repeat(3, auto) 1fr;
+    row-gap: 2rem;
+}
+
+.menu-lateral__logo {
+    
+    justify-self: center
+ 
+}
+
+.cabecalho{
+    
+    justify-self: center;
+ }
+
+ .secao {
+    
+    display: grid;
+    align-items: end;
+    row-gap: 2rem;
+ }
+
+ .secao-horizontal , .secao-vertical {
+    
+    grid-template-rows: 70px auto;
+
+ }
+
+ .secao-horizontal .secao__cartoes {
+   
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(80%/2, max(350px, 80%/3)), 1fr));
+    gap: 1.25em;
+
+}
+
+.secao-horizontal .secao_underline_cartoes {
+    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 200px);
+
+  }
+
+  .secao-horizontal .cartao {
+   
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 3rem 0.9rem;
+   column-gap: 1.25em;
+}
+
+.secao-horizontal .cartao__imagem {
+    
+    grid-area: 1 / 1 / 4 / 2;
+
+}
+
+.secao-horizontal .cartao__botao {
+
+    grid-area: 2 / 3 / 3 / 4;
+
+}
+
+.secao-horizontal .cartao__titulo {
+    
+    grid-area: 2 / 2 / 3 / 3;
+
+}
+
+.secao-horizontal .cartao__player {
+   
+    grid-area: 3 / 2 / 4 / 3;
+
+}
+
+
