--- a/src/style/organizacao.css
+++ b/src/style/organizacao.css
@@ -105,4 +105,37 @@
 
 }
 
+.secao-vertical {
+   
+    grid-template-columns: 1fr auto;
+
+}
+
+.secao-vertical .secao__cartoes {
+    display: grid;
+    grid-auto-flow: column;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    grid-column: 1/3;
+    column-gap: 1.25em;
+}
+
+.navbar__items {
+    
+    display: grid;
+    grid-template-columns: repeat(3, 1fr)
+
+
+}
+
+.navbar__item button {
+   
+         display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: .4rem;
+
+}
+
+
 
